second signup page

--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -552,6 +552,14 @@
   "page.resetPassSubTitle": "Restablecer la contraseña",
   "page.resetPassDescription": "Introduzca una nueva contraseña y confirme.",
   "page.resetPassSave": "Salvar",
+  "page.signUnTitleCompany": "Mas cerca al futuro",
+  "page.signUnSubTitleCompany": "La relación directa con su mercancia durante el viaje",
+  "page.company.title": "Información de la empresa",
+  "page.company.subtitle": "Queremos saber un poco de su empresa, estos datos nos ayudarán para prestarle el mejor servicio",
+  "page.companyName": "Nombre de la empresa",
+  "page.nit": "Nit",
+  "page.contactPhone": "Teléfono de contacto",
+  "page.dato1": "Dato 1",
   "page.signInTitle": "Bienvenido a CargAPP",
   "page.signInSubtitle": "Una solución digital para su empresa.",
   "page.signInRememberMe": "Recuérdame",
@@ -576,6 +584,7 @@
   "page.signUpGooglePlus": "Regístrese con Google Plus",
   "page.signUpAuth0": "Regístrese con Auth0",
   "page.signUpAlreadyAccount": "¿Ya tienes una cuenta? Registrarse.",
+  "page.continueButton": "Continuar",
   "widget.reportswidget.label": "Ingresos",
   "widget.reportswidget.details":
     "Lorem ipsum dolor sentarse amet   consectetur adipisicing elit   sed hacer eiusmod tempor",
