last register screen completed

--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -550,10 +550,15 @@
   "page.sendRequest": "Enviar petición",
   "page.resetPassTitle": "Isomórfico",
   "page.resetPassSubTitle": "Restablecer la contraseña",
+  "page.endButton": "Finalizar",
   "page.resetPassDescription": "Introduzca una nueva contraseña y confirme.",
   "page.resetPassSave": "Salvar",
-  "page.signUnTitleCompany": "Mas cerca al futuro",
-  "page.signUnSubTitleCompany": "La relación directa con su mercancia durante el viaje",
+  "page.signUpTitleCompany": "Mas cerca al futuro",
+  "page.signUpSubTitleCompany": "La relación directa con su mercancia durante el viaje",
+  "page.financial.subtitle": "Ahora cuentenos cual sera su forma de pago para los servicios que solicite, la transparencia del servicio es muy importante para nosotros",
+  "page.paymentMethod": "Medio de pago",
+  "page.accountNumber": "Número de cuenta",
+  "page.bank": "Banco",
   "page.company.title": "Información de la empresa",
   "page.company.subtitle": "Queremos saber un poco de su empresa, estos datos nos ayudarán para prestarle el mejor servicio",
   "page.companyName": "Nombre de la empresa",
