dashboard widgets added

--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -666,6 +666,16 @@
   "trackings.filter": "Filtrar",
   "antTable.title.lastName": "Apellido",
   "antTable.title.city": "Ciudad",
+  "widget.reportswidget.titledashboard": "que bueno tenerlo de regreso",
+  "widget.reportswidget.subtitledashboard": "Todos sus envios van sin contratiempos. Actualmente tiene 5 envios en proceso.",
+  "widget.reportswidget.titlevehiclesontrack": "Vehiculos en la via",
+  "widget.reportswidget.titleservice": "Solicitar un servicio",
+  "widget.reportswidget.titleactualtravels": "Viajes en curso",
+  "widget.reportswidget.activeusers": "Cuentas activas",
+  "widget.reportswidget.datavehiclesontrack": "carros",
+  "widget.reportswidget.booked": "Servicios agendados",
+  "widget.reportswidget.titledistance": "Distancia conducida",
+  "widget.reportswidget.milles": "mi",
   "antTable.title.street": "Calle",
   "antTable.title.email": "Email",
   "antTable.title.dob": "DOB",
