--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -12,6 +12,14 @@
   "sidebar.leafletMap": "Mapa del folleto",
   "sidebar.calendar": "Calendario",
   "trackings.title": "Servicio de viajes",
+  "trackingsservice.title": "Ofertas de servicio",
+  "antTable.title.counterOffer": "Contraoferta",
+  "antTable.title.value": "Valor",
+  "antTable.title.calification": "Calificación",
+  "antTable.title.truckstate": "Estado del camion",
+  "trackings.freightquantity": "Valor del flete",
+  "trackings.truckstate": "Estado del camion",
+  "trackings.driverrate": "Calificación conductor",
   "trackings.subtitle": "Total",
   "trackings.filter": "Filtro",
   "trackings.loadType": "Tipo de carga",
