map fixed and popover added

--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -20,7 +20,11 @@
   "trackings.freightquantity": "Valor del flete",
   "trackings.truckstate": "Estado del camion",
   "trackings.driverrate": "Calificación conductor",
-  "trackings.subtitle": "Total",
+  "trackings.loadplace": "Lugar de cargue",
+  "trackings.loadweight": "Peso de la carga",
+  "trackings.freightoffer": "Oferta del flete",
+  "trackings.unloadplace": "Lugar de descargue",
+  "trackings.loadType": "Tipo de carga",
   "trackings.filter": "Filtro",
   "trackings.loadType": "Tipo de carga",
   "trackings.state": "Estado",
