signup and signin form

--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -15,6 +15,7 @@
   "trackingsservice.title": "Ofertas de servicio",
   "antTable.title.counterOffer": "Contraoferta",
   "antTable.title.value": "Valor",
+  "page.welcomeTo": "Bienvenido a ",
   "antTable.title.calification": "Calificación",
   "antTable.title.truckstate": "Estado del camion",
   "trackings.freightquantity": "Valor del flete",
@@ -85,6 +86,10 @@
   "sidebar.500": "500",
   "sidebar.404": "404",
   "sidebar.signIn": "Ingresar",
+  "page.meetUs": "¿Aún no nos conoces?",
+  "page.invitation": "Te invitamos a conocer un poco más de ",
+  "app.footer": "© Todos los derechos reservados. Cargapp 2019",
+  "page.start": "Comenzar",
   "sidebar.signUp": "Regístrate",
   "sidebar.forgotPw": "Olvidé contraseñas",
   "sidebar.resetPw": "Restablecer contraseñas",
@@ -596,9 +601,10 @@
   "page.password": "Contraseña",
   "page.signInGooglePlus": "Acceder con Google Plus",
   "page.signInAuth0": "Iniciar sesión con Auth0",
-  "page.signInForgotPass": "Se te olvidó tu contraseña",
+  "page.signInForgotPass": "¿Olvidaste tu contraseña?",
   "page.signInCreateAccount": "Crear una cuenta Isomorphoic",
   "page.signUpTitle": "Isomórfico",
+  "page.remember": "Recordar mis datos",
   "page.signUpTermsConditions":
     "Estoy de acuerdo con los términos y condiciones",
   "page.signUpButton": "Comenzar",
@@ -608,6 +614,7 @@
   "page.signUpGooglePlus": "Regístrese con Google Plus",
   "page.signUpAuth0": "Regístrese con Auth0",
   "page.signUpAlreadyAccount": "¿Ya tienes una cuenta? Registrarse.",
+  "page.signup": "Registrarse",
   "page.continueButton": "Continuar",
   "widget.reportswidget.label": "Ingresos",
   "widget.reportswidget.details":
