--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -90,6 +90,10 @@
   "page.invitation": "Te invitamos a conocer un poco más de ",
   "app.footer": "© Todos los derechos reservados. Cargapp 2019",
   "page.start": "Comenzar",
+  "page.closer": "Más cerca al ",
+  "page.future": "futuro",
+  "page.relation": "La relación directa con su mercancia durante el viaje",
+  "page.continue": "Continuar",
   "sidebar.signUp": "Regístrate",
   "sidebar.forgotPw": "Olvidé contraseñas",
   "sidebar.resetPw": "Restablecer contraseñas",
