--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -583,11 +583,13 @@
   "page.resetPassSave": "Salvar",
   "page.signUpTitleCompany": "Mas cerca al futuro",
   "page.signUpSubTitleCompany": "La relación directa con su mercancia durante el viaje",
-  "page.financial.subtitle": "Ahora cuentenos cual sera su forma de pago para los servicios que solicite, la transparencia del servicio es muy importante para nosotros",
   "page.paymentMethod": "Medio de pago",
   "page.accountNumber": "Número de cuenta",
   "page.bank": "Banco",
+  "page.end": "Finalizar",
   "page.company.title": "Información de la empresa",
+  "page.financial.title": "Información de medio de pago",
+  "page.financial.subtitle": "Ahora cuéntenos cual será su forma de pago para los servicios que solicite. La transparencia del servicio es muy importante para nosotros",
   "page.company.subtitle": "Queremos saber un poco de su empresa, estos datos nos ayudarán para prestarle el mejor servicio",
   "page.companyName": "Nombre de la empresa",
   "page.nit": "Nit",
