--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -86,6 +86,8 @@
   "sidebar.500": "500",
   "sidebar.404": "404",
   "sidebar.signIn": "Ingresar",
+  "widget.reportswidget.vehiculesonroad": "Vehículos en camino",
+  "widget.reportswidget.vehicules": " Vehículos",
   "page.meetUs": "¿Aún no nos conoces?",
   "page.invitation": "Te invitamos a conocer un poco más de ",
   "app.footer": "© Todos los derechos reservados. Cargapp 2019",
