--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -54,6 +54,8 @@
   "sidebar.selectbox": "Seleccionar",
   "sidebar.transfer": "Transferir",
   "sidebar.autocomplete": "Autocompletar",
+  "antTable.title.options": "Opciones",
+  "general.edit": "Editar",
   "sidebar.boxOptions": "Opciones de Caja",
   "sidebar.uiElements": "Elementos de la interfaz de usuario",
   "sidebar.badge": "Distintivo",
@@ -89,6 +91,10 @@
   "widget.reportswidget.vehiculesonroad": "Vehículos en camino",
   "widget.reportswidget.vehicules": " Vehículos",
   "page.meetUs": "¿Aún no nos conoces?",
+  "roles.title": "Roles",
+  "general.add": "Añadir",
+  "antTable.title.code": "Codigo",
+  "antTable.title.description": "Descripción",
   "page.invitation": "Te invitamos a conocer un poco más de ",
   "app.footer": "© Todos los derechos reservados. Cargapp 2019",
   "page.start": "Comenzar",
