--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -89,6 +89,7 @@
   "sidebar.404": "404",
   "sidebar.signIn": "Ingresar",
   "widget.reportswidget.vehiculesonroad": "Vehículos en camino",
+  "cargappModel.title": "Modelos Cargapp",
   "widget.reportswidget.vehicules": " Vehículos",
   "page.meetUs": "¿Aún no nos conoces?",
   "roles.title": "Roles",
