user_roles CRUD finished

--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -90,6 +90,10 @@
   "sidebar.signIn": "Ingresar",
   "widget.reportswidget.vehiculesonroad": "Vehículos en camino",
   "cargappModel.title": "Modelos Cargapp",
+  "antTable.title.user_email": "Correo usuario",
+  "antTable.title.admin_email": "Correo administrador",
+  "antTable.title.role": "Rol",
+  "users_roles.title": "Roles de usuarios",
   "widget.reportswidget.vehicules": " Vehículos",
   "page.meetUs": "¿Aún no nos conoces?",
   "roles.title": "Roles",
