--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -91,9 +91,12 @@
   "widget.reportswidget.vehiculesonroad": "Vehículos en camino",
   "cargappModel.title": "Modelos Cargapp",
   "antTable.title.user_email": "Correo usuario",
+  "antTable.title.model": "Modelo",
+  "general.back": "Regresar",
   "antTable.title.admin_email": "Correo administrador",
   "antTable.title.role": "Rol",
   "users_roles.title": "Roles de usuarios",
+  "parameters.title": "Parametros",
   "widget.reportswidget.vehicules": " Vehículos",
   "page.meetUs": "¿Aún no nos conoces?",
   "roles.title": "Roles",
