status CRUD full

--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -94,6 +94,7 @@
   "antTable.title.model": "Modelo",
   "general.back": "Regresar",
   "permissions.title": "Permisos",
+  "status.title": "Estatus",
   "antTable.title.admin_email": "Correo administrador",
   "antTable.title.role": "Rol",
   "users_roles.title": "Roles de usuarios",
