countries CRUD full

--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -95,6 +95,9 @@
   "general.back": "Regresar",
   "permissions.title": "Permisos",
   "status.title": "Estatus",
+  "antTable.title.cioc": "Cioc",
+  "countries.title": "Países",
+  "general.migrate": "Migrar",
   "antTable.title.admin_email": "Correo administrador",
   "antTable.title.role": "Rol",
   "users_roles.title": "Roles de usuarios",
