--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -99,6 +99,7 @@
   "countries.title": "Países",
   "states.title": "Estados",
   "antTable.title.country": "País",
+  "cities.title": "Ciudades",
   "general.migrate": "Migrar",
   "antTable.title.admin_email": "Correo administrador",
   "antTable.title.role": "Rol",
@@ -715,6 +716,7 @@
   "antTable.title.initialDate": "Fecha de recogida",
   "antTable.title.destiny": "Destino",
   "antTable.title.state": "Estado",
+  "antTable.title.state_location": "Estado - Ubicación",
   "trackings.map.title": "Viajes en curso",
   "antTable.title.lastName": "Apellido",
   "antTable.title.city": "Ciudad",
