states show fixed

--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -717,6 +717,8 @@
   "antTable.title.destiny": "Destino",
   "antTable.title.state": "Estado",
   "antTable.title.state_location": "Estado - Ubicación",
+  "sidebar.users": "Usuarios",
+  "sidebar.roles": "Roles",
   "trackings.map.title": "Viajes en curso",
   "antTable.title.lastName": "Apellido",
   "antTable.title.city": "Ciudad",
