--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -719,6 +719,7 @@
   "antTable.title.state_location": "Estado - Ubicación",
   "sidebar.users": "Usuarios",
   "sidebar.roles": "Roles",
+  "documentType.title": "Tipos de documentos",
   "trackings.map.title": "Viajes en curso",
   "antTable.title.lastName": "Apellido",
   "antTable.title.city": "Ciudad",
