vehicle type completed

--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -720,6 +720,7 @@
   "sidebar.users": "Usuarios",
   "sidebar.roles": "Roles",
   "documentType.title": "Tipos de documentos",
+  "vehicleType.title": "Tipos de vehiculos",
   "trackings.map.title": "Viajes en curso",
   "antTable.title.lastName": "Apellido",
   "antTable.title.city": "Ciudad",
