CRUD cargapp interactions

--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -25,8 +25,8 @@
   "trackings.loadweight": "Peso de la carga",
   "trackings.freightoffer": "Oferta del flete",
   "trackings.unloadplace": "Lugar de descargue",
-  "trackings.loadType": "Tipo de carga",
   "trackings.filter": "Filtro",
+  "cargappIntegrations.title" : "Integraciones Cargapp",
   "trackings.loadType": "Tipo de carga",
   "trackings.state": "Estado",
   "trackings.destiny": "Destino",
