admin CRUD completed

--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -27,6 +27,8 @@
   "trackings.unloadplace": "Lugar de descargue",
   "trackings.filter": "Filtro",
   "cargappIntegrations.title" : "Integraciones Cargapp",
+  "companies.title" : "Empresas",
+  "antTable.title.sector": "Sector",
   "trackings.loadType": "Tipo de carga",
   "trackings.state": "Estado",
   "trackings.destiny": "Destino",
