--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -12,6 +12,8 @@
   "sidebar.leafletMap": "Mapa del folleto",
   "sidebar.calendar": "Calendario",
   "trackings.title": "Servicio de viajes",
+  "documents.title": "Documentos",
+  "antTable.title.document_id": "Id de documento",
   "trackingsservice.title": "Ofertas de servicio",
   "antTable.title.counterOffer": "Contraoferta",
   "antTable.title.value": "Valor",
@@ -29,6 +31,7 @@
   "cargappIntegrations.title" : "Integraciones Cargapp",
   "companies.title" : "Empresas",
   "antTable.title.sector": "Sector",
+  "tickets.title": "Tickets",
   "trackings.loadType": "Tipo de carga",
   "trackings.state": "Estado",
   "trackings.destiny": "Destino",
@@ -92,8 +95,13 @@
   "sidebar.signIn": "Ingresar",
   "widget.reportswidget.vehiculesonroad": "Vehículos en camino",
   "cargappModel.title": "Modelos Cargapp",
+  "general.upload": "Click, para subir el archivo",
+  "general.download":  "Click, para descargar el archivo",
   "antTable.title.user_email": "Correo usuario",
   "antTable.title.model": "Modelo",
+  "antTable.title.title": "Titulo",
+  "antTable.title.body": "Cuerpo",
+  "antTable.title.user": "Usuario",
   "general.back": "Regresar",
   "permissions.title": "Permisos",
   "status.title": "Estatus",
