Profiles CRUD completed

--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -103,6 +103,9 @@
   "antTable.title.body": "Cuerpo",
   "antTable.title.user": "Usuario",
   "antTable.title.expire_date": "Fecha de vencimiento",
+  "profiles.title": "Perfiles",
+  "antTable.title.last_name": "Apellidos",
+  "antTable.title.first_name": "Nombres",  
   "general.back": "Regresar",
   "permissions.title": "Permisos",
   "status.title": "Estatus",
