Vehicles CRUD completed

--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -105,7 +105,10 @@
   "antTable.title.expire_date": "Fecha de vencimiento",
   "profiles.title": "Perfiles",
   "antTable.title.last_name": "Apellidos",
-  "antTable.title.first_name": "Nombres",  
+  "antTable.title.first_name": "Nombres",
+  "vehicles.title": "Vehiculos",
+  "antTable.title.plate": "Placa",
+  "antTable.title.brand": "Marca",
   "general.back": "Regresar",
   "permissions.title": "Permisos",
   "status.title": "Estatus",
