challenges CRUD completed

--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -109,6 +109,8 @@
   "vehicles.title": "Vehiculos",
   "antTable.title.plate": "Placa",
   "antTable.title.brand": "Marca",
+  "challenges.title": "Desafíos",
+  "antTable.title.point": "Puntos",
   "general.back": "Regresar",
   "permissions.title": "Permisos",
   "status.title": "Estatus",
