crud user-challenges completed

--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -110,6 +110,9 @@
   "antTable.title.plate": "Placa",
   "antTable.title.brand": "Marca",
   "challenges.title": "Desafíos",
+  "antTable.title.position": "Posición",
+  "antTable.title.challenge": "Reto",
+  "user_challenges.title": "Retos-Usuarios",
   "antTable.title.point": "Puntos",
   "general.back": "Regresar",
   "permissions.title": "Permisos",
