coupons CRUD completed

--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -113,6 +113,7 @@
   "antTable.title.position": "Posición",
   "antTable.title.challenge": "Reto",
   "user_challenges.title": "Retos-Usuarios",
+  "coupons.title": "Cupones",
   "antTable.title.point": "Puntos",
   "general.back": "Regresar",
   "permissions.title": "Permisos",
