crud cupones_user

--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -112,8 +112,14 @@
   "challenges.title": "Desafíos",
   "antTable.title.position": "Posición",
   "antTable.title.challenge": "Reto",
-  "user_challenges.title": "Retos-Usuarios",
+  "user_challenges.title": "Retos - Usuarios",
+  "user_challenges.coupon": "Cupon",
   "coupons.title": "Cupones",
+  "user_coupons.title": "Usuario - Cupones",
+  "antTable.title.discount": "Descuento",
+  "antTable.title.applied_item_id": "Item id",
+  "antTable.title.cargapp_model": "Cargapp model",
+  "antTable.title.coupon": "Cupon",
   "antTable.title.point": "Puntos",
   "general.back": "Regresar",
   "permissions.title": "Permisos",
