--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -120,6 +120,7 @@
   "antTable.title.applied_item_id": "Item id",
   "antTable.title.cargapp_model": "Cargapp model",
   "antTable.title.coupon": "Cupon",
+  "prizes.title": "Premios",
   "antTable.title.point": "Puntos",
   "general.back": "Regresar",
   "permissions.title": "Permisos",
