users_login_registration auth completed

--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -123,6 +123,8 @@
   "prizes.title": "Premios",
   "users_prizes.title": "Premios de usuarios",
   "antTable.title.prize": "Premio",
+  "page.phone": "Teléfono",
+  "page.passwordConfirmation": "Confirmación de contraseña",
   "antTable.title.point": "Puntos",
   "general.back": "Regresar",
   "permissions.title": "Permisos",
