--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -24,8 +24,10 @@
   "sidebar.payment_methods": "Métodos de pago",
   "sidebar.user_payment_methods": "Métodos de pago de usuarios",
   "user_payment_methods.title": "Métodos de pago de usuarios",
+  "reports.title": "Reportes",
   "sidebar.indoors": "Internos",
   "antTable.title.observation": "Observación",
+  "antTable.title.start_date": "Fecha de inicio",
   "sidebar.cargappModels": "Modelos",
   "sidebar.parameters": "Paramentros",
   "sidebar.permissions": "Permisos",
