--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -28,6 +28,7 @@
   "sidebar.indoors": "Internos",
   "antTable.title.observation": "Observación",
   "antTable.title.start_date": "Fecha de inicio",
+  "sidebar.reports": "Reportes",
   "sidebar.cargappModels": "Modelos",
   "sidebar.parameters": "Paramentros",
   "sidebar.permissions": "Permisos",
