--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -29,6 +29,10 @@
   "antTable.title.observation": "Observación",
   "antTable.title.start_date": "Fecha de inicio",
   "sidebar.reports": "Reportes",
+  "services.title": "Servicios",
+  "general.findOrigin": "Buscar origen",
+  "general.findDestination": "Buscar destino",
+  "sidebar.services": "Servicios",
   "sidebar.cargappModels": "Modelos",
   "sidebar.parameters": "Paramentros",
   "sidebar.permissions": "Permisos",
