--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -33,6 +33,7 @@
   "general.findOrigin": "Buscar origen",
   "general.findDestination": "Buscar destino",
   "sidebar.services": "Servicios",
+  "serviceDocuments.title": "Documentos de servicio",
   "sidebar.cargappModels": "Modelos",
   "sidebar.parameters": "Paramentros",
   "sidebar.permissions": "Permisos",
@@ -59,6 +60,8 @@
   "antTable.title.document_id": "Id de documento",
   "trackingsservice.title": "Ofertas de servicio",
   "antTable.title.counterOffer": "Contraoferta",
+  "antTable.title.documentType": "Tipo de documento",
+  "antTable.title.service": "Servicio",
   "antTable.title.value": "Valor",
   "page.welcomeTo": "Bienvenido a ",
   "antTable.title.calification": "Calificación",
