--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -62,7 +62,10 @@
   "antTable.title.counterOffer": "Contraoferta",
   "antTable.title.documentType": "Tipo de documento",
   "antTable.title.service": "Servicio",
+  "favoriteRoutes.title": "Rutas favoritas",
   "antTable.title.value": "Valor",
+  "antTable.title.origin_city": "Ciudad de origen",
+  "antTable.title.destination_city": "Ciudad de destino",
   "page.welcomeTo": "Bienvenido a ",
   "antTable.title.calification": "Calificación",
   "antTable.title.truckstate": "Estado del camion",
