--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -15,6 +15,11 @@
   "sidebar.userPrizes": "Premios de usuarios",
   "sidebar.documents": "Documentos",
   "sidebar.profiles": "Perfiles",
+  "sidebar.serviceDocuments": "Documentos de servicios",
+  "sidebar.favoriteRoutes": "Rutas favoritas",
+  "sidebar.routes": "Rutas",
+  "antTable.title.seeDocuments": "Ver documentos",
+  "users.title": "Usuarios",
   "sidebar.challenges": "Retos",
   "sidebar.userChallenges": "Retos de usuarios",
   "sidebar.companies": "Compañias",
