--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -66,6 +66,7 @@
   "trackingsservice.title": "Ofertas de servicio",
   "antTable.title.counterOffer": "Contraoferta",
   "antTable.title.documentType": "Tipo de documento",
+  "antTable.title.action": "Acción",
   "antTable.title.service": "Servicio",
   "favoriteRoutes.title": "Rutas favoritas",
   "antTable.title.value": "Valor",
