--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -68,6 +68,10 @@
   "antTable.title.documentType": "Tipo de documento",
   "antTable.title.action": "Acción",
   "cargappAds.title": "Anuncios",
+  "userLocations.title": "Ubicaciones de usuarios",
+  "antTable.title.longitude": "Longitud",
+  "antTable.title.latitude": "Latitud",
+  "servicelocations.title": "Ubicaciones de servicios",
   "antTable.title.service": "Servicio",
   "favoriteRoutes.title": "Rutas favoritas",
   "antTable.title.value": "Valor",
