--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -72,6 +72,10 @@
   "antTable.title.longitude": "Longitud",
   "antTable.title.latitude": "Latitud",
   "servicelocations.title": "Ubicaciones de servicios",
+  "bankAccounts.title": "Cuentas bancarias",
+  "antTable.title.accountNumber": "Número de cuenta",
+  "antTable.title.accountType": "Tipo de cuenta",
+  "antTable.title.bank": "Banco",
   "antTable.title.service": "Servicio",
   "favoriteRoutes.title": "Rutas favoritas",
   "antTable.title.value": "Valor",
