--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -76,6 +76,9 @@
   "antTable.title.accountNumber": "Número de cuenta",
   "antTable.title.accountType": "Tipo de cuenta",
   "antTable.title.bank": "Banco",
+  "rateServices.title": "Calificación de servicios",
+  "antTable.title.servicePoint": "Puntos de servicio",
+  "antTable.title.driverPoint": "Puntos de viaje",
   "antTable.title.service": "Servicio",
   "favoriteRoutes.title": "Rutas favoritas",
   "antTable.title.value": "Valor",
