--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -79,6 +79,10 @@
   "rateServices.title": "Calificación de servicios",
   "antTable.title.servicePoint": "Puntos de servicio",
   "antTable.title.driverPoint": "Puntos de viaje",
+  "cargappPayments.title": "Pagos Cargapp",
+  "cargappPayments.title": "Pagos Cargapp",
+  "antTable.title.company": "Compañia",
+  "antTable.title.amount": "Cantidad",
   "antTable.title.service": "Servicio",
   "favoriteRoutes.title": "Rutas favoritas",
   "antTable.title.value": "Valor",
