cors heroku removed

--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -10,6 +10,9 @@
   "sidebar.signin": "Iniciar sesión",
   "sidebar.rolesUsers": "Roles y usuarios",
   "sidebar.userRoles": "Roles de usuarios",
+  "widget.title_configuration_profile": "Perfil",
+  "Profile.changePassword": "Cambiar contraseña",
+  "Profile.currentPassword": "Contraseña actual",
   "sidebar.usersCoupons": "Cupones de usuarios",
   "sidebar.prizes": "Premios",
   "sidebar.userPrizes": "Premios de usuarios",
@@ -733,6 +736,8 @@
   "page.nit": "Nit",
   "page.contactPhone": "Teléfono de contacto",
   "page.dato1": "Dato 1",
+  "page.confirm": "Confirmar",
+  "page.cancel": "Cancelar",
   "page.signInTitle": "Bienvenido a CargAPP",
   "page.signInSubtitle": "Una solución digital para su empresa.",
   "page.signInRememberMe": "Recuérdame",
