--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -72,7 +72,10 @@
   "antTable.title.action": "Acción",
   "cargappAds.title": "Anuncios",
   "userLocations.title": "Ubicaciones de usuarios",
+  "sidebar.serviceLocations": "Ubicación de servicios",
+  "sidebar.userLocations": "Ubicación de usuarios",
   "antTable.title.longitude": "Longitud",
+  "sidebar.cargappAds": "Anuncios Cargapp",
   "antTable.title.latitude": "Latitud",
   "servicelocations.title": "Ubicaciones de servicios",
   "bankAccounts.title": "Cuentas bancarias",
@@ -737,6 +740,9 @@
   "page.contactPhone": "Teléfono de contacto",
   "page.dato1": "Dato 1",
   "page.confirm": "Confirmar",
+  "sidebar.cargappPayments": "Pagos Cargapp",
+  "sidebar.rateServices": "Calificación de servicios",
+  "sidebar.bankAccounts": "Cuentas bancarias",
   "page.cancel": "Cancelar",
   "page.signInTitle": "Bienvenido a CargAPP",
   "page.signInSubtitle": "Una solución digital para su empresa.",
