integrations services of users

--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -74,6 +74,7 @@
   "userLocations.title": "Ubicaciones de usuarios",
   "sidebar.serviceLocations": "Ubicación de servicios",
   "sidebar.userLocations": "Ubicación de usuarios",
+  "antTable.title.information": "Información adicional",
   "antTable.title.longitude": "Longitud",
   "sidebar.cargappAds": "Anuncios Cargapp",
   "antTable.title.latitude": "Latitud",
