--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -75,6 +75,41 @@
   "sidebar.serviceLocations": "Ubicación de servicios",
   "sidebar.userLocations": "Ubicación de usuarios",
   "antTable.title.information": "Información adicional",
+  "admin.title.bankAccount": "Cuenta",
+  "admin.title.type": "Tipo",
+  "admin.title.bank": "Banco",
+  "admin.title.user": "Usuario",
+  "antTable.title.price": "Precio",
+  "admin.title.status": "Status",
+  "admin.title.code": "Codigo",
+  "admin.title.provider": "Proveedor",
+  "admin.title.urlProvider": "Url",
+  "admin.title.urlProduction": "Url",
+  "admin.title.urlDevelopment": "Url",
+  "admin.title.email": "Email",
+  "admin.title.password": "Password",
+  "admin.title.phone": "Phone",
+  "admin.title.pin": "Pin",
+  "admin.title.applicationId": "Aplicación",
+  "admin.title.clientId": "Cliente",
+  "admin.title.apiKey": "API",
+  "admin.title.active": "Activación",
+  "admin.title.name": "Nombre",
+  "admin.title.price": "Precio",
+  "admin.title.description": "Descripción",
+  "admin.title.body": "Cuerpo",
+  "admin.title.url": "Url",
+  "admin.title.token": "Token",
+  "admin.title.uuid": "Uuid",
+  "admin.title.paymentMethod": "Método",
+  "admin.title.service": "Servicio",
+  "admin.title.company": "Compañia",
+  "admin.title.discount": "Descuento",
+  "admin.title.generator": "Generador",
+  "admin.title.receiver": "Receptor",
+  "admin.title.quantity": "Cantidad",
+  "admin.title.transactionCode": "Codigo",
+  "admin.title.observation": "Observación",
   "antTable.title.longitude": "Longitud",
   "sidebar.cargappAds": "Anuncios Cargapp",
   "antTable.title.latitude": "Latitud",
