--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -282,10 +282,10 @@
   "challenges.title": "Desafíos",
   "antTable.title.position": "Posición",
   "antTable.title.challenge": "Reto",
-  "user_challenges.title": "Retos - Usuarios",
+  "user_challenges.title": "Retos de Usuarios",
   "user_challenges.coupon": "Cupon",
   "coupons.title": "Cupones",
-  "user_coupons.title": "Usuario - Cupones",
+  "user_coupons.title": "Cupones de Usuarios",
   "antTable.title.discount": "Descuento",
   "antTable.title.applied_item_id": "Item id",
   "antTable.title.cargapp_model": "Cargapp model",
@@ -830,7 +830,10 @@
   "antTable.title.initialDate": "Fecha de recogida",
   "antTable.title.destiny": "Destino",
   "antTable.title.state": "Estado",
-  "antTable.title.state_location": "Estado - Ubicación",
+  "antTable.title.state_location": "Estado(Ubicación)",
+  "antTable.title.verify": "Verificar usuario",
+  "admin.title.phone_number": "Teléfono",
+  "admin.title.identification": "Cédula",
   "sidebar.users": "Usuarios",
   "sidebar.roles": "Roles",
   "documentType.title": "Tipos de documentos",
