routes on vehicle manager fixed

--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -843,7 +843,7 @@
   "trackings.map.title": "Viajes en curso",
   "antTable.title.lastName": "Apellido",
   "antTable.title.city": "Ciudad",
-  "widget.reportswidget.titledashboard": "que bueno tenerlo de regreso",
+  "widget.reportswidget.titledashboard": "Que bueno tenerlo de regreso",
   "widget.reportswidget.subtitledashboard": "Todos sus envios van sin contratiempos. Actualmente tiene 5 envios en proceso.",
   "widget.reportswidget.titlevehiclesontrack": "Vehiculos en la via",
   "widget.reportswidget.titleservice": "Solicitar un servicio",
