--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -807,6 +807,7 @@
   "widget.cardwidget3.text": "Logro",
   "widget.progresswidget1.label": "Descargar",
   "widget.load": "Cargar",
+  "label.date": "Fecha",
   "widget.progresswidget1.details": "50% Completo",
   "widget.progresswidget2.label": "Apoyo",
   "widget.progresswidget2.details": "80% de clientes satisfechos",
