--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -808,6 +808,9 @@
   "widget.progresswidget1.label": "Descargar",
   "widget.load": "Cargar",
   "label.date": "Fecha",
+  "antTable.title.identification": "Identificación",
+  "antTable.title.phone": "Teléfono",
+  "drivers.title": "Conductores",
   "widget.progresswidget1.details": "50% Completo",
   "widget.progresswidget2.label": "Apoyo",
   "widget.progresswidget2.details": "80% de clientes satisfechos",
