admin cargapp flujo check

--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -852,6 +852,9 @@
   "general.verify_new": "Verificar",
   "admin.title.identification": "Cédula",
   "sidebar.users": "Usuarios",
+  "sidebar.user": "Usuario",
+  "admin.title.average": "Promedio",
+  "antTable.title.details": "Detalles",
   "sidebar.roles": "Roles",
   "documentType.title": "Tipos de documentos",
   "vehicleType.title": "Tipos de vehiculos",
