--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -728,6 +728,8 @@
   "page.oper": "Dueño de flota",
   "page.name": "Nombre",
   "page.operSub": "Administre sus vehiculos",
+  "page.phoneDuplicated": "Teléfono duplicado",
+  "page.identification": "Número de identificación",
   "page.forgetPassSubTitle": "Olvidó su contraseña?",
   "page.forgetPassDescription": "Introduzca su correo electrónico y le enviaremos un enlace de restablecimiento.",
   "page.sendRequest": "Enviar petición",
