spinner redux fixed

--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -730,6 +730,9 @@
   "page.operSub": "Administre sus vehiculos",
   "page.phoneDuplicated": "Teléfono duplicado",
   "page.identification": "Número de identificación",
+  "page.country": "País",
+  "Signup.pin": "Pin",
+  "page.sendAgain": "Reenviar",
   "page.forgetPassSubTitle": "Olvidó su contraseña?",
   "page.forgetPassDescription": "Introduzca su correo electrónico y le enviaremos un enlace de restablecimiento.",
   "page.sendRequest": "Enviar petición",
